fix: replaced function to compatiblity java versions